<resources>
    <string name="app_name">JB Transport</string>
    <string name="select_route">Select Primary Route</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="transportAppKey">SkJUcmFzcG9ydEFwcEFwcEtleQ==</string>
    <string name="reset">Change Primary Route</string>
    <string name="last_updated">Last Updated :</string>
    <string name="noticefaketext">Fake notice text demo text</string>
    <string name="primaryroute">PRIMARY ROUTE</string>
    <string name="submit">Submit complaint</string>
    <string name="MapView">Full Route on Map</string>
    <string name="routenumbertext">Route Number :</string>
    <string name="routenumbervalue">Route 1232</string>
    <string name="directionsimagedesc">Directions Image Icon</string>
    <string name="departuretime">Departure Time :</string>
    <string name="via">Via :</string>
    <string name="title_activity_college_map">Map</string>
    <string name="JBIET_Entrance">JBIET Entrance</string>
    <string name="mainblock">JBIET Main Block</string>
    <string name="frstyrblck">JBIET First Yr Block</string>
    <string name="basktbal">BasketBall Court</string>
    <string name="sae">SAE-JBIET</string>
    <string name="cokehub">Coke Hub</string>
    <string name="cricktground">Cricket Ground</string>
    <string name="bank">Syndicate Bank</string>
    <string name="cafe">Cafeteria</string>
    <string name="cc">Central Canteen</string>
    <string name="mnr">MNR Auditorium Second Floor</string>
    <string name="prkn1">Parking Lot 1</string>
    <string name="prkn2">Parking Lot 2</string>
    <string name="cvlece"><![CDATA[Civil & EEE Block]]></string>
    <string name="eee">Dept. of EEE Ground Floor</string>
    <string name="cvl">Dept. of CIVIL First Floor</string>
    <string name="mech">Dept. of MECHANICAL First Floor</string>
    <string name="cse">Dept. of CSE First Floor</string>
    <string name="ece">Dept. of ECE Second Floor</string>
    <string name="it">Dept. of IT First Floor</string>
    <string name="ecm">Dept. of ECM Second Floor</string>
    <string name="transprtoffce">Transport Office</string>
    <string name="stationery">Stationery</string>
    <string name="sac">SAC-JBIET Ground Floor</string>
    <string name="sprts">Sports Room Ground Floor</string>
    <string name="placmnt">Placement Cell</string>
    <string name="admin">Administration Block</string>
    <string name="mba">MBA Block</string>
    <string name="fullroute">Full Route :</string>
    <string name="areyousure">By setting this as your primary route, you will be able to receive update notifications for any bus changes that pertain to this route.\n\nThe primary route can be changed later if needed.</string>
    <string name="nointernet">No Internet Connection</string>
    <string name="search">SEARCH</string>
    <string name="refresh">REFRESH</string>
    <string name="call">CALL</string>
    <string name="logout">Logout</string>
    <string name="proceed">PROCEED</string>
    <string name="cancel">CANCEL</string>
    <string name="tryagainlater">Try Again Later</string>
    <string name="checknoticeboard">Check Notice Board</string>
    <string name="routenotavailable">Route has been cancelled for today. Please check the Notice Board for Buses Info.</string>
    <string name="AuthError">AuthKeyError</string>
    <string name="ErrorSelecting">ErrorSelecting</string>
    <string name="RoutesSelectJsonArrayName">Routes</string>
    <string name="Setasdefaultroute">Set As Primary Route</string>
    <string name="viewfulldetails">View Full Deatils</string>
    <string name="Noticeboard">Notice board</string>
    <string name="mailto">mailto:</string>
    <string name="bhanuteja.r07email">bhanuteja.r07@gmail.com</string>
    <string name="subjectemailqstn">\?subject=</string>
    <string name="reportingabug">Reporting A Bug/Feedback</string>
    <string name="bodymail"><![CDATA[&body=]]></string>
    <string name="mailintro">Hello, Team Sync  I want to report a bug/give feedback corresponding to the app JB Transport...  -Your name</string>
    <string name="sendemail">Send Email</string>
    <string name="requestlocation">Request Location</string>
    <string name="sharelocation">Share Location</string>
    <string name="opensource">Open Source Licenses</string>
    <string name="requestlocationabout">Upon requesting for location, an anonymous request shall be sent to all the app users of your bus.\nTo which only the people present or boarding the bus are requested to respond.</string>
    <string name="locationnote">NOTE : The location you receive may or may not be correct as even people not onboard the bus may also respond, only students are solely responsible for location sharing.\n\nAll the requests and responses are monitored by the management. Serious Actions will be taken for wrong location sharing.</string>
    <string name="licenses_text">\t\nThe following are third party software/api that are used in JB Transport app.\n\n
        \t<a href="https://github.com/amitshekhariitbhu/Fast-Android-Networking">Fast-Android-Networking</a>\n\n
\t<a href="https://github.com/bumptech/glide">Glide</a>\n\n
        \t<a href="https://github.com/OneSignal">One Signal</a>\n\n
\t<a href="https://github.com/code-mc/loadtoast">Load Toast</a>\n\n
        \t<a href="https://github.com/JakeWharton/butterknife">ButterKnife</a>\n\n
    </string>
    <string name="contributers">We thank the open source community for all their contributions.\n\n

        <b>Developer :</b>\n\n
\t<a href="https://github.com/bh4nut3j4">Bhanu Teja</a>\n\n
        <b>Contributers :</b>\n\n
        \t<a href="https://www.facebook.com/anishreddyravula/">Anish Reddy</a>\n\n
        \t<a href="https://www.facebook.com/sarthak.kammari/">Sarthak</a>\n\n
        \t<a href="https://www.facebook.com/rohit.dulam">Rohit Dulam</a>\n\n
        \t<a href="https://github.com/sri-ker/">Sriker Reddy</a>\n\n
        \t<a href="https://www.facebook.com/profile.php?id=100001236403045/">Vamshi krishna</a>\n\n
    </string>
    <string name="warning">Warning</string>
    <string name="calltransportdept">Call Transport Department</string>
    <string name="searchtitle">Search</string>
    <string name="searchmessage">Enter the area name</string>
    <string name="transportcallmsg">** Prefer calling only incase of emergencies.</string>
    <string name="resetwarning">You wont be able to receive notification updates regarding this route.\n\nAre you sure you wish to change your primary Route ?</string>
    <string name="searchhint">E.g: Punjagutta</string>
    <string name="invalidinput">Invalid Input</string>
    <string name="AreaName">AreaName</string>
    <string name="jbgrouppublic">JB-Public-Push</string>
    <string name="searcherror">No Details Found ! \nTry searching area name with exact keywords. Please refrain or try not to use dots or special characters.</string>
    <string name="searcherrorselecting">SearchErrorSelecting</string>
    <string name="aboutus">About Us</string>
    <string name="ajbietstartup">JBIET STudent StartUp</string>
    <string name="acmdesc">Association for computing machinary</string>
    <string name="OK">OK</string>
    <string name="retry">Retry</string>
    <string name="Notifications">Notifications</string>
    <string name="heading">NotificationTitle</string>
    <string name="message">NotificationMessage</string>
    <string name="timestamp">NotificationTimeStamp</string>
    <string name="no_notifications">No Notifications</string>
    <string name="invalid_identity">Invalid Identity</string>
    <string name="please_tell_us_your_concern">Please Tell Us Your Concern</string>
    <string name="complaint_subject">Complaint Subject</string>
    <string name="complaint_description">Complaint Description</string>
    <string name="descrription_required">Description Required !</string>
    <string name="subject_required">Subject Required !</string>
    <string name="submitted_successdull">Complaint Submitted Successfully</string>
    <string name="shared_successfully">Location Shared Successfully</string>
    <string name="route_reset">Your Route Has Been Reset</string>
    <string name="holdon">Hold On !</string>
    <string name="requestsent">Request Sent Successfully</string>
    <string name="signincancelled">Sign In Cancelled</string>
    <string name="helloname">Hello </string>
    <string name="nogmaps">You dont have google maps installed</string>
    <string name="lcoationrequest_titile">Location Permission Required</string>
    <string name="locationreqmsg">Inorder to share the current bus location, you need to grant permission to access your location</string>
    <string name="receiverfcmtoken">receiverFcmToken</string>
    <string name="receiverrouteID">routeID</string>
    <string name="fcmToken">fcmToken</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="buslocationfewsecondsago">(Bus Location few Seconds Ago)</string>
    <string name="gmailname">GmailName</string>
    <string name="gmailemail">GmailEmail</string>
    <string name="rollnumber">RollNumber</string>
    <string name="failedtosendlocation">Failed to send bus location</string>
    <string name="locationsent">LocationSent</string>
    <string name="receiveremail">ReceiverEmail</string>
    <string name="invalidtime">InvalidTime</string>
    <string name="sharebuslocation">Share Bus Location</string>
    <string name="sharelocationwarning">Someone has requested for the current bus location. \nPlease send your location only if your are in the BUS. \nAll the requests and responses are monitored by the management and actions will be taken if the location is shared outside of the bus route.\n Only ou are solely responsible for your action.</string>
    <string name="sharelocationbutn">Share Location</string>
    <string name="scanyouridmsg">Please Scan the BarCode present at backside of your ID card</string>
    <string name="location_will_be_shared">Location will be shared, Thank you!</string>
    <string name="logoutbtn">Logout</string>
    <string name="logout_btn">logout</string>
    <string name="connecting_to_transport_department">connecting...</string>
    <string name="JBIET">JBIET</string>
    <string name="areyousuretologout">Are you sure you want to logout ?</string>
    <string name="jb_public_push">JB-Public-Push</string>
    <string name="designed_amp_developed_by">Designed &amp; Developed By</string>
    <string name="error_labs">Error Labs</string>
    <string name="acm_jbiet">ACM-Jbiet</string>
    <string name="needpermissiontomakecall">Need permission to make a call</string>
    <string name="all_routes">All Routes</string>
    <string name="complaints">Complaints</string>
    <string name="notifications">Notifications</string>
    <string name="sos_request_bus_location">SOS Request Bus Location</string>
    <string name="college_map">College Map</string>
    <string name="about_us">About Us</string>
    <string name="report_a_bug">Report A Bug</string>
    <string name="open_source_license">Open Source License</string>
    <string name="errorlabsurl">https://errorlabs.in</string>
    <string name="acmurl">https://jbgroup.org.in/ACM</string>
    <string name="errurl">www.errorlabs.in</string>
    <string name="cnctng">Conneting...</string>
    <string name="url">url</string>
    <string name="err_lbs">errorlabs</string>
    <string name="acmname">acm</string>
    <string name="status">Status</string>
    <string name="number">Number</string>
    <string name="title_activity_maps">Share Current Location</string>
<string name="default_info_title">Default Location</string>
<string name="default_info_snippet">No places found, because location permission is disabled.</string>
<string name="option_get_place">Get place</string>
</resources>